fixed z-index

--- a/frontend/src/components/TextEditor/TextEditor.module.css
+++ b/frontend/src/components/TextEditor/TextEditor.module.css
@@ -2,7 +2,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100vh;
-  z-index: 0;
+  z-index: 10;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
